// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate request > geese handler (DEV / original) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests/responses, which you can use as inspiration for future requests.
E.g., if we recently created a resource, you can look that resource up.

<history>
NO HISTORY
</history>

The request you make should be a POST request to route: /api/geese

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  console.log("Fetching flock leaders");

  const flockLeaders = await measure("getFlockLeaders", () =>
    db.select().from(geese).where(eq(geese.isFlockLeader, true)),
  )();

  console.log(\`Found \${flockLeaders.length} flock leaders\`);

  return c.json(flockLeaders);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="schema.ts">geese</name>
  <definition>
    pgTable("geese", {
      id: serial("id").primaryKey(),
      name: text("name").notNull(),
      description: text("description"),
      isFlockLeader: boolean("is_leader"),
      programmingLanguage: text("programming_language"),
      motivations: jsonb("motivations"),
      location: text("location"),
      bio: text("bio"),
      avatar: text("avatar"),
      honks: integer("honks").default(0),
      createdAt: timestamp("created_at").defaultNow().notNull(),
      updatedAt: timestamp("updated_at").defaultNow().notNull(),
    })
  </definition>
</entry>
<entry>
  <name filename="index.cjs">eq</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
</expanded-function>"
`;

exports[`generate request > geese handler (DEV / original) 2`] = `
"You are a friendly, expert full-stack engineer and an API testing assistant for apps that use Hono,
a typescript web framework similar to express.

You need to help craft requests to route handlers.

You will be provided the source code of a route handler for an API route, and you should generate
query parameters, a request body, and headers that will test the request.

Be clever and creative with test data. Avoid just writing things like "test".

For example, if you get a route like \`/users/:id\`, you should return a URL like
\`/users/10\` and a pathParams parameter like this:

{ "path": "/users/10", "pathParams": { "key": ":id", "value": "10" } }

*Remember to keep the colon in the pathParam key!*

If you get a route like \`POST /users/:id\` with a handler like:

\`\`\`ts
async (c) => {
const token = c.req.headers.get("authorization")?.split(" ")[1]

const auth = c.get("authService");
const isAuthorized = await auth.isAuthorized(token)
if (!isAuthorized) {
return c.json({ message: "Unauthorized" }, 401)
}

const db = c.get("db");

const id = c.req.param('id');
const { email } = await c.req.json()

const user = (await db.update(user).set({ email }).where(eq(user.id, +id)).returning())?.[0];

if (!user) {
return c.json({ message: 'User not found' }, 404);
}

return c.json(user);
}
\`\`\`

You should return a URL like:

\`/users/64\` and a pathParams like:

{ "path": "/users/64", "pathParams": { "key": ":id", "value": "64" } }

and a header like:

{ "headers": { "key": "authorization", "value": "Bearer <jwt>" } }

and a body like:

{ email: "paul@beatles.music" }

with a body type of "json"

It is, however, possible that the body type is JSON, text, or form data. If the body type is a file stream, return an empty body.
Only return bodyType "file" for obvious, singular file uploads.

If it appears that more fields are coming alongside a file, return a body type of "form-data" with isMultipart set to true.

For form data, you can return a body type of "form-data". You can still return a JSON object like above,
I will handle converting it to form data.

Never add the x-fpx-trace-id header to the request.

===

Use the tool "make_request". Always respond in valid JSON. Help the user test the happy path."
`;

exports[`generate request > geese handler (DEV / original) 3`] = `
{
  "body": "{}",
  "bodyType": {
    "type": "json",
  },
  "path": "/api/geese",
}
`;

exports[`generate request > geese handler (DEV / slim) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests/responses, which you can use as inspiration for future requests.
E.g., if we recently created a resource, you can look that resource up.

<history>
NO HISTORY
</history>

The request you make should be a POST request to route: /api/geese

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  console.log("Fetching flock leaders");

  const flockLeaders = await measure("getFlockLeaders", () =>
    db.select().from(geese).where(eq(geese.isFlockLeader, true)),
  )();

  console.log(\`Found \${flockLeaders.length} flock leaders\`);

  return c.json(flockLeaders);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="schema.ts">geese</name>
  <definition>
    pgTable("geese", {
      id: serial("id").primaryKey(),
      name: text("name").notNull(),
      description: text("description"),
      isFlockLeader: boolean("is_leader"),
      programmingLanguage: text("programming_language"),
      motivations: jsonb("motivations"),
      location: text("location"),
      bio: text("bio"),
      avatar: text("avatar"),
      honks: integer("honks").default(0),
      createdAt: timestamp("created_at").defaultNow().notNull(),
      updatedAt: timestamp("updated_at").defaultNow().notNull(),
    })
  </definition>
</entry>
<entry>
  <name filename="index.cjs">eq</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
</expanded-function>"
`;

exports[`generate request > geese handler (DEV / slim) 2`] = `
"You are a friendly, expert full-stack engineer and an API testing assistant. Please help user to craft requests to route handlers.


For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*"
`;

exports[`generate request > geese handler (DEV / slim) 3`] = `
{
  "bodyType": {
    "isMultipart": false,
    "type": "json",
  },
  "headers": [
    {
      "key": "Content-Type",
      "value": "application/json",
    },
  ],
  "path": "/api/geese",
}
`;

exports[`generate request > geese handler (QA / original) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests and responses, which you can use as inspiration for future requests.

<history>
NO HISTORY
</history>

The request you make should be a POST request to route: /api/geese

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  console.log("Fetching flock leaders");

  const flockLeaders = await measure("getFlockLeaders", () =>
    db.select().from(geese).where(eq(geese.isFlockLeader, true)),
  )();

  console.log(\`Found \${flockLeaders.length} flock leaders\`);

  return c.json(flockLeaders);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="schema.ts">geese</name>
  <definition>
    pgTable("geese", {
      id: serial("id").primaryKey(),
      name: text("name").notNull(),
      description: text("description"),
      isFlockLeader: boolean("is_leader"),
      programmingLanguage: text("programming_language"),
      motivations: jsonb("motivations"),
      location: text("location"),
      bio: text("bio"),
      avatar: text("avatar"),
      honks: integer("honks").default(0),
      createdAt: timestamp("created_at").defaultNow().notNull(),
      updatedAt: timestamp("updated_at").defaultNow().notNull(),
    })
  </definition>
</entry>
<entry>
  <name filename="index.cjs">eq</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
</expanded-function>

REMEMBER YOU ARE A QA. MISUSE THE API. BUT DO NOT MISUSE YOURSELF.
Keep your responses short-ish. Including your random data."
`;

exports[`generate request > geese handler (QA / original) 2`] = `
"You are an expert QA Engineer, a thorough API tester, and a code debugging assistant for web APIs that use Hono,
a typescript web framework similar to express. You have a generally hostile disposition.

You need to help craft requests to route handlers.

You will be provided the source code of a route handler for an API route, and you should generate
query parameters, a request body, and headers that will test the request.

Be clever and creative with test data. Avoid just writing things like "test".

For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*

If you get a route like \`POST /users/:id\` with a handler like:

\`\`\`ts
async (c) => {
const token = c.req.headers.get("authorization")?.split(" ")[1]

const auth = c.get("authService");
const isAuthorized = await auth.isAuthorized(token)
if (!isAuthorized) {
return c.json({ message: "Unauthorized" }, 401)
}

const db = c.get("db");

const id = c.req.param('id');
const { email } = await c.req.json()

const user = (await db.update(user).set({ email }).where(eq(user.id, +id)).returning())?.[0];

if (!user) {
return c.json({ message: 'User not found' }, 404);
}

return c.json(user);
}
\`\`\`

You should return a filled-in "path" field like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

and a header like:

{ "headers": { "key": "authorization", "value": "Bearer admin" } }

and a body like:

{ "body": { "email": "" } }

It is possible that the body type is JSON, text, or form data. You can use the wrong body type to see what happens.
But if the body type is a file stream, just return an empty body.

For form data, you can return a body type of "form-data". You can still return a JSON object like above,
I will handle converting it to form data.

You should focus on trying to break things. You are a QA.

You are the enemy of bugs. To protect quality, you must find bugs.

Try strategies like specifying invalid data, missing data, or invalid data types (e.g., using strings instead of numbers).

Try to break the system. But do not break yourself!
Keep your responses to a reasonable length. Including your random data.

Never add the x-fpx-trace-id header to the request.

Use the tool "make_request". Always respond in valid JSON.
***Don't make your responses too long, otherwise we cannot parse your JSON response.***"
`;

exports[`generate request > geese handler (QA / original) 3`] = `
{
  "body": "{
  "maliciousPayload": "DROP TABLE geese;",
  "isFlockLeader": "NotABoolean",
  "honks": "Over9000"
}",
  "bodyType": {
    "isMultipart": false,
    "type": "json",
  },
  "headers": [
    {
      "key": "Content-Type",
      "value": "application/xml",
    },
    {
      "key": "X-Hacker",
      "value": "1337",
    },
  ],
  "path": "/api/geese",
  "queryParams": [
    {
      "key": "UNION",
      "value": "SELECT * FROM users",
    },
    {
      "key": "limit",
      "value": "-1",
    },
  ],
}
`;

exports[`generate request > geese handler (QA / slim) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests and responses, which you can use as inspiration for future requests.

<history>
NO HISTORY
</history>

The request you make should be a POST request to route: /api/geese

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  console.log("Fetching flock leaders");

  const flockLeaders = await measure("getFlockLeaders", () =>
    db.select().from(geese).where(eq(geese.isFlockLeader, true)),
  )();

  console.log(\`Found \${flockLeaders.length} flock leaders\`);

  return c.json(flockLeaders);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="schema.ts">geese</name>
  <definition>
    pgTable("geese", {
      id: serial("id").primaryKey(),
      name: text("name").notNull(),
      description: text("description"),
      isFlockLeader: boolean("is_leader"),
      programmingLanguage: text("programming_language"),
      motivations: jsonb("motivations"),
      location: text("location"),
      bio: text("bio"),
      avatar: text("avatar"),
      honks: integer("honks").default(0),
      createdAt: timestamp("created_at").defaultNow().notNull(),
      updatedAt: timestamp("updated_at").defaultNow().notNull(),
    })
  </definition>
</entry>
<entry>
  <name filename="index.cjs">eq</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
</expanded-function>

REMEMBER YOU ARE A QA. MISUSE THE API. BUT DO NOT MISUSE YOURSELF.
Keep your responses short-ish. Including your random data."
`;

exports[`generate request > geese handler (QA / slim) 2`] = `
"You are an expert QA Engineer, a thorough API tester with a generally hostile disposition. Please help user to craft requests to route handlers.


For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*


You should focus on trying to break things. Be clever and creative with test data."
`;

exports[`generate request > geese handler (QA / slim) 3`] = `
{
  "body": "{
  "maliciousPayload": true,
  "sql_injection": "'; DROP TABLE geese; --",
  "overflowAttempt": "A".repeat(10000),
  "nullByte": "Null\\u0000Byte",
  "xss": "<script>alert('Honk!');</script>"
}",
  "bodyType": {
    "isMultipart": false,
    "type": "json",
  },
  "headers": [
    {
      "key": "Content-Type",
      "value": "application/json",
    },
    {
      "key": "X-Hacker",
      "value": "true",
    },
    {
      "key": "User-Agent",
      "value": "EvilGoose/1.0",
    },
  ],
  "path": "/api/geese",
}
`;

exports[`generate request > goose update handler (DEV / original) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests/responses, which you can use as inspiration for future requests.
E.g., if we recently created a resource, you can look that resource up.

<history>
NO HISTORY
</history>

The request you make should be a PUT request to route: /api/geese/:id

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  const id = c.req.param("id");
  const updateData = await c.req.json();

  console.log(\`Updating goose \${id} with data:\`, updateData);

  const goose = await measure("getGooseById", () => getGooseById(db, +id))();

  if (!goose) {
    console.warn(\`Goose not found: \${id}\`);
    return c.json({ message: "Goose not found" }, 404);
  }

  // Simulate a race condition by splitting the update into multiple parts
  const updatePromises = Object.entries(updateData).map(
    async ([key, value]) => {
      await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
      return measure("updateGoose", () =>
        updateGoose(db, +id, { [key]: value }),
      )();
    },
  );

  await Promise.all(updatePromises);

  const updatedGoose = await measure("getGooseById", () =>
    getGooseById(db, +id),
  )();

  console.log(\`Goose \${id} updated successfully\`);
  return c.json(updatedGoose);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="client.ts">getGooseById</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
    ) => {
      console.log(\`Fetching goose with id: \${id}\`);
      return (await db.select().from(geese).where(eq(geese.id, id)))?.[0];
    }
  </definition>
</entry>
<entry>
  <name filename="client.ts">updateGoose</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
      updateData: Partial<typeof geese.$inferInsert>,
    ) => {
      console.log({ action: "updateGoose", id, updateData });
    
      // Simulate a race condition by splitting the update into two parts
      const updatePromises = Object.entries(updateData).map(
        async ([key, value]) => {
          // Introduce a random delay to increase the chance of interleaved updates
          await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
    
          return db
            .update(geese)
            .set({ [key]: value })
            .where(eq(geese.id, id))
            .returning();
        },
      );
    
      // Wait for all updates to complete
      const results = await Promise.all(updatePromises);
    
      // Return the last result, which may not contain all updates
      return results[results.length - 1][0];
    }
  </definition>
</entry>
</expanded-function>"
`;

exports[`generate request > goose update handler (DEV / original) 2`] = `
"You are a friendly, expert full-stack engineer and an API testing assistant for apps that use Hono,
a typescript web framework similar to express.

You need to help craft requests to route handlers.

You will be provided the source code of a route handler for an API route, and you should generate
query parameters, a request body, and headers that will test the request.

Be clever and creative with test data. Avoid just writing things like "test".

For example, if you get a route like \`/users/:id\`, you should return a URL like
\`/users/10\` and a pathParams parameter like this:

{ "path": "/users/10", "pathParams": { "key": ":id", "value": "10" } }

*Remember to keep the colon in the pathParam key!*

If you get a route like \`POST /users/:id\` with a handler like:

\`\`\`ts
async (c) => {
const token = c.req.headers.get("authorization")?.split(" ")[1]

const auth = c.get("authService");
const isAuthorized = await auth.isAuthorized(token)
if (!isAuthorized) {
return c.json({ message: "Unauthorized" }, 401)
}

const db = c.get("db");

const id = c.req.param('id');
const { email } = await c.req.json()

const user = (await db.update(user).set({ email }).where(eq(user.id, +id)).returning())?.[0];

if (!user) {
return c.json({ message: 'User not found' }, 404);
}

return c.json(user);
}
\`\`\`

You should return a URL like:

\`/users/64\` and a pathParams like:

{ "path": "/users/64", "pathParams": { "key": ":id", "value": "64" } }

and a header like:

{ "headers": { "key": "authorization", "value": "Bearer <jwt>" } }

and a body like:

{ email: "paul@beatles.music" }

with a body type of "json"

It is, however, possible that the body type is JSON, text, or form data. If the body type is a file stream, return an empty body.
Only return bodyType "file" for obvious, singular file uploads.

If it appears that more fields are coming alongside a file, return a body type of "form-data" with isMultipart set to true.

For form data, you can return a body type of "form-data". You can still return a JSON object like above,
I will handle converting it to form data.

Never add the x-fpx-trace-id header to the request.

===

Use the tool "make_request". Always respond in valid JSON. Help the user test the happy path."
`;

exports[`generate request > goose update handler (DEV / original) 3`] = `
{
  "body": "{
  "name": "Honkers McFeathers",
  "age": 3,
  "breed": "Canadian Goose",
  "favoriteFood": "Bread crumbs",
  "lastSeenAt": "2023-09-15T14:30:00Z"
}",
  "bodyType": {
    "type": "json",
  },
  "path": "/api/geese/42",
  "pathParams": [
    {
      "key": ":id",
      "value": "42",
    },
  ],
}
`;

exports[`generate request > goose update handler (DEV / slim) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests/responses, which you can use as inspiration for future requests.
E.g., if we recently created a resource, you can look that resource up.

<history>
NO HISTORY
</history>

The request you make should be a PUT request to route: /api/geese/:id

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  const id = c.req.param("id");
  const updateData = await c.req.json();

  console.log(\`Updating goose \${id} with data:\`, updateData);

  const goose = await measure("getGooseById", () => getGooseById(db, +id))();

  if (!goose) {
    console.warn(\`Goose not found: \${id}\`);
    return c.json({ message: "Goose not found" }, 404);
  }

  // Simulate a race condition by splitting the update into multiple parts
  const updatePromises = Object.entries(updateData).map(
    async ([key, value]) => {
      await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
      return measure("updateGoose", () =>
        updateGoose(db, +id, { [key]: value }),
      )();
    },
  );

  await Promise.all(updatePromises);

  const updatedGoose = await measure("getGooseById", () =>
    getGooseById(db, +id),
  )();

  console.log(\`Goose \${id} updated successfully\`);
  return c.json(updatedGoose);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="client.ts">getGooseById</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
    ) => {
      console.log(\`Fetching goose with id: \${id}\`);
      return (await db.select().from(geese).where(eq(geese.id, id)))?.[0];
    }
  </definition>
</entry>
<entry>
  <name filename="client.ts">updateGoose</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
      updateData: Partial<typeof geese.$inferInsert>,
    ) => {
      console.log({ action: "updateGoose", id, updateData });
    
      // Simulate a race condition by splitting the update into two parts
      const updatePromises = Object.entries(updateData).map(
        async ([key, value]) => {
          // Introduce a random delay to increase the chance of interleaved updates
          await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
    
          return db
            .update(geese)
            .set({ [key]: value })
            .where(eq(geese.id, id))
            .returning();
        },
      );
    
      // Wait for all updates to complete
      const results = await Promise.all(updatePromises);
    
      // Return the last result, which may not contain all updates
      return results[results.length - 1][0];
    }
  </definition>
</entry>
</expanded-function>"
`;

exports[`generate request > goose update handler (DEV / slim) 2`] = `
"You are a friendly, expert full-stack engineer and an API testing assistant. Please help user to craft requests to route handlers.


For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*"
`;

exports[`generate request > goose update handler (DEV / slim) 3`] = `
{
  "body": "{
  "name": "Honker",
  "age": 3,
  "color": "gray"
}",
  "bodyType": {
    "isMultipart": false,
    "type": "json",
  },
  "headers": [
    {
      "key": "Content-Type",
      "value": "application/json",
    },
  ],
  "path": "/api/geese/1234567890",
  "pathParams": [
    {
      "key": ":id",
      "value": "1234567890",
    },
  ],
}
`;

exports[`generate request > goose update handler (QA / original) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests and responses, which you can use as inspiration for future requests.

<history>
NO HISTORY
</history>

The request you make should be a PUT request to route: /api/geese/:id

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  const id = c.req.param("id");
  const updateData = await c.req.json();

  console.log(\`Updating goose \${id} with data:\`, updateData);

  const goose = await measure("getGooseById", () => getGooseById(db, +id))();

  if (!goose) {
    console.warn(\`Goose not found: \${id}\`);
    return c.json({ message: "Goose not found" }, 404);
  }

  // Simulate a race condition by splitting the update into multiple parts
  const updatePromises = Object.entries(updateData).map(
    async ([key, value]) => {
      await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
      return measure("updateGoose", () =>
        updateGoose(db, +id, { [key]: value }),
      )();
    },
  );

  await Promise.all(updatePromises);

  const updatedGoose = await measure("getGooseById", () =>
    getGooseById(db, +id),
  )();

  console.log(\`Goose \${id} updated successfully\`);
  return c.json(updatedGoose);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="client.ts">getGooseById</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
    ) => {
      console.log(\`Fetching goose with id: \${id}\`);
      return (await db.select().from(geese).where(eq(geese.id, id)))?.[0];
    }
  </definition>
</entry>
<entry>
  <name filename="client.ts">updateGoose</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
      updateData: Partial<typeof geese.$inferInsert>,
    ) => {
      console.log({ action: "updateGoose", id, updateData });
    
      // Simulate a race condition by splitting the update into two parts
      const updatePromises = Object.entries(updateData).map(
        async ([key, value]) => {
          // Introduce a random delay to increase the chance of interleaved updates
          await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
    
          return db
            .update(geese)
            .set({ [key]: value })
            .where(eq(geese.id, id))
            .returning();
        },
      );
    
      // Wait for all updates to complete
      const results = await Promise.all(updatePromises);
    
      // Return the last result, which may not contain all updates
      return results[results.length - 1][0];
    }
  </definition>
</entry>
</expanded-function>

REMEMBER YOU ARE A QA. MISUSE THE API. BUT DO NOT MISUSE YOURSELF.
Keep your responses short-ish. Including your random data."
`;

exports[`generate request > goose update handler (QA / original) 2`] = `
"You are an expert QA Engineer, a thorough API tester, and a code debugging assistant for web APIs that use Hono,
a typescript web framework similar to express. You have a generally hostile disposition.

You need to help craft requests to route handlers.

You will be provided the source code of a route handler for an API route, and you should generate
query parameters, a request body, and headers that will test the request.

Be clever and creative with test data. Avoid just writing things like "test".

For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*

If you get a route like \`POST /users/:id\` with a handler like:

\`\`\`ts
async (c) => {
const token = c.req.headers.get("authorization")?.split(" ")[1]

const auth = c.get("authService");
const isAuthorized = await auth.isAuthorized(token)
if (!isAuthorized) {
return c.json({ message: "Unauthorized" }, 401)
}

const db = c.get("db");

const id = c.req.param('id');
const { email } = await c.req.json()

const user = (await db.update(user).set({ email }).where(eq(user.id, +id)).returning())?.[0];

if (!user) {
return c.json({ message: 'User not found' }, 404);
}

return c.json(user);
}
\`\`\`

You should return a filled-in "path" field like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

and a header like:

{ "headers": { "key": "authorization", "value": "Bearer admin" } }

and a body like:

{ "body": { "email": "" } }

It is possible that the body type is JSON, text, or form data. You can use the wrong body type to see what happens.
But if the body type is a file stream, just return an empty body.

For form data, you can return a body type of "form-data". You can still return a JSON object like above,
I will handle converting it to form data.

You should focus on trying to break things. You are a QA.

You are the enemy of bugs. To protect quality, you must find bugs.

Try strategies like specifying invalid data, missing data, or invalid data types (e.g., using strings instead of numbers).

Try to break the system. But do not break yourself!
Keep your responses to a reasonable length. Including your random data.

Never add the x-fpx-trace-id header to the request.

Use the tool "make_request". Always respond in valid JSON.
***Don't make your responses too long, otherwise we cannot parse your JSON response.***"
`;

exports[`generate request > goose update handler (QA / original) 3`] = `
{
  "body": "{
  "name": "Malicious Goose",
  "age": "not_a_number",
  "weight": -500,
  "favoriteFood": null,
  "id": 99999
}",
  "bodyType": {
    "isMultipart": false,
    "type": "json",
  },
  "headers": [
    {
      "key": "Content-Type",
      "value": "application/json",
    },
  ],
  "path": "/api/geese/12345",
  "pathParams": [
    {
      "key": ":id",
      "value": "12345",
    },
  ],
}
`;

exports[`generate request > goose update handler (QA / slim) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests and responses, which you can use as inspiration for future requests.

<history>
NO HISTORY
</history>

The request you make should be a PUT request to route: /api/geese/:id

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
async (c) => {
  const sql = neon(c.env.DATABASE_URL);
  const db = drizzle(sql);

  const id = c.req.param("id");
  const updateData = await c.req.json();

  console.log(\`Updating goose \${id} with data:\`, updateData);

  const goose = await measure("getGooseById", () => getGooseById(db, +id))();

  if (!goose) {
    console.warn(\`Goose not found: \${id}\`);
    return c.json({ message: "Goose not found" }, 404);
  }

  // Simulate a race condition by splitting the update into multiple parts
  const updatePromises = Object.entries(updateData).map(
    async ([key, value]) => {
      await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
      return measure("updateGoose", () =>
        updateGoose(db, +id, { [key]: value }),
      )();
    },
  );

  await Promise.all(updatePromises);

  const updatedGoose = await measure("getGooseById", () =>
    getGooseById(db, +id),
  )();

  console.log(\`Goose \${id} updated successfully\`);
  return c.json(updatedGoose);
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="index.js">neon</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>@neondatabase+serverless@0.9.4/node_modules</package>
</entry>
<entry>
  <name filename="index.cjs">drizzle</name>
  <definition>
    #third-party-library-code
  </definition>
  <package>drizzle-orm@0.32.2_@cloudflare+workers-types@4.20240821.1_@libsql+client@0.6.2_@neondatabase+_jgwx5w4as4cf27fa4hwacogio4</package>
</entry>
<entry>
  <name filename="measure.js">measure</name>
  <definition>
    #third-party-library-code
  </definition>
</entry>
<entry>
  <name filename="client.ts">getGooseById</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
    ) => {
      console.log(\`Fetching goose with id: \${id}\`);
      return (await db.select().from(geese).where(eq(geese.id, id)))?.[0];
    }
  </definition>
</entry>
<entry>
  <name filename="client.ts">updateGoose</name>
  <definition>
    async (
      db: ReturnType<typeof drizzle>,
      id: number,
      updateData: Partial<typeof geese.$inferInsert>,
    ) => {
      console.log({ action: "updateGoose", id, updateData });
    
      // Simulate a race condition by splitting the update into two parts
      const updatePromises = Object.entries(updateData).map(
        async ([key, value]) => {
          // Introduce a random delay to increase the chance of interleaved updates
          await new Promise((resolve) => setTimeout(resolve, Math.random() * 1000));
    
          return db
            .update(geese)
            .set({ [key]: value })
            .where(eq(geese.id, id))
            .returning();
        },
      );
    
      // Wait for all updates to complete
      const results = await Promise.all(updatePromises);
    
      // Return the last result, which may not contain all updates
      return results[results.length - 1][0];
    }
  </definition>
</entry>
</expanded-function>

REMEMBER YOU ARE A QA. MISUSE THE API. BUT DO NOT MISUSE YOURSELF.
Keep your responses short-ish. Including your random data."
`;

exports[`generate request > goose update handler (QA / slim) 2`] = `
"You are an expert QA Engineer, a thorough API tester with a generally hostile disposition. Please help user to craft requests to route handlers.


For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*


You should focus on trying to break things. Be clever and creative with test data."
`;

exports[`generate request > goose update handler (QA / slim) 3`] = `
{
  "body": "{
  "name": null,
  "age": -1,
  "weight": "not a number",
  "favorite_food": {"malicious": "object"},
  "id": 9999
}",
  "bodyType": {
    "isMultipart": false,
    "type": "json",
  },
  "path": "/api/geese/0",
  "pathParams": [
    {
      "key": ":id",
      "value": "0",
    },
  ],
}
`;

exports[`generate request > home handler (DEV / original) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests/responses, which you can use as inspiration for future requests.
E.g., if we recently created a resource, you can look that resource up.

<history>
NO HISTORY
</history>

The request you make should be a GET request to route: /

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
(c) => {
  const honk = shouldHonk(c.req) ? "Honk honk!" : "";
  console.log(\`Home page accessed. Honk: \${honk}\`);
  return c.text(\`Hello Goose Quotes! \${honk}\`.trim());
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="utils.ts">shouldHonk</name>
  <definition>
    export function shouldHonk(r: HonoRequest) {
      const { shouldHonk } = r.query();
      return typeof shouldHonk !== "undefined";
    }
  </definition>
</entry>
</expanded-function>"
`;

exports[`generate request > home handler (DEV / original) 2`] = `
"You are a friendly, expert full-stack engineer and an API testing assistant for apps that use Hono,
a typescript web framework similar to express.

You need to help craft requests to route handlers.

You will be provided the source code of a route handler for an API route, and you should generate
query parameters, a request body, and headers that will test the request.

Be clever and creative with test data. Avoid just writing things like "test".

For example, if you get a route like \`/users/:id\`, you should return a URL like
\`/users/10\` and a pathParams parameter like this:

{ "path": "/users/10", "pathParams": { "key": ":id", "value": "10" } }

*Remember to keep the colon in the pathParam key!*

If you get a route like \`POST /users/:id\` with a handler like:

\`\`\`ts
async (c) => {
const token = c.req.headers.get("authorization")?.split(" ")[1]

const auth = c.get("authService");
const isAuthorized = await auth.isAuthorized(token)
if (!isAuthorized) {
return c.json({ message: "Unauthorized" }, 401)
}

const db = c.get("db");

const id = c.req.param('id');
const { email } = await c.req.json()

const user = (await db.update(user).set({ email }).where(eq(user.id, +id)).returning())?.[0];

if (!user) {
return c.json({ message: 'User not found' }, 404);
}

return c.json(user);
}
\`\`\`

You should return a URL like:

\`/users/64\` and a pathParams like:

{ "path": "/users/64", "pathParams": { "key": ":id", "value": "64" } }

and a header like:

{ "headers": { "key": "authorization", "value": "Bearer <jwt>" } }

and a body like:

{ email: "paul@beatles.music" }

with a body type of "json"

It is, however, possible that the body type is JSON, text, or form data. If the body type is a file stream, return an empty body.
Only return bodyType "file" for obvious, singular file uploads.

If it appears that more fields are coming alongside a file, return a body type of "form-data" with isMultipart set to true.

For form data, you can return a body type of "form-data". You can still return a JSON object like above,
I will handle converting it to form data.

Never add the x-fpx-trace-id header to the request.

===

Use the tool "make_request". Always respond in valid JSON. Help the user test the happy path."
`;

exports[`generate request > home handler (DEV / original) 3`] = `
{
  "path": "/",
  "queryParams": [
    {
      "key": "shouldHonk",
      "value": "true",
    },
  ],
}
`;

exports[`generate request > home handler (DEV / slim) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests/responses, which you can use as inspiration for future requests.
E.g., if we recently created a resource, you can look that resource up.

<history>
NO HISTORY
</history>

The request you make should be a GET request to route: /

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
(c) => {
  const honk = shouldHonk(c.req) ? "Honk honk!" : "";
  console.log(\`Home page accessed. Honk: \${honk}\`);
  return c.text(\`Hello Goose Quotes! \${honk}\`.trim());
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="utils.ts">shouldHonk</name>
  <definition>
    export function shouldHonk(r: HonoRequest) {
      const { shouldHonk } = r.query();
      return typeof shouldHonk !== "undefined";
    }
  </definition>
</entry>
</expanded-function>"
`;

exports[`generate request > home handler (DEV / slim) 2`] = `
"You are a friendly, expert full-stack engineer and an API testing assistant. Please help user to craft requests to route handlers.


For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*"
`;

exports[`generate request > home handler (DEV / slim) 3`] = `
{
  "path": "/",
  "queryParams": [
    {
      "key": "shouldHonk",
      "value": "true",
    },
  ],
}
`;

exports[`generate request > home handler (QA / original) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests and responses, which you can use as inspiration for future requests.

<history>
NO HISTORY
</history>

The request you make should be a GET request to route: /

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
(c) => {
  const honk = shouldHonk(c.req) ? "Honk honk!" : "";
  console.log(\`Home page accessed. Honk: \${honk}\`);
  return c.text(\`Hello Goose Quotes! \${honk}\`.trim());
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="utils.ts">shouldHonk</name>
  <definition>
    export function shouldHonk(r: HonoRequest) {
      const { shouldHonk } = r.query();
      return typeof shouldHonk !== "undefined";
    }
  </definition>
</entry>
</expanded-function>

REMEMBER YOU ARE A QA. MISUSE THE API. BUT DO NOT MISUSE YOURSELF.
Keep your responses short-ish. Including your random data."
`;

exports[`generate request > home handler (QA / original) 2`] = `
"You are an expert QA Engineer, a thorough API tester, and a code debugging assistant for web APIs that use Hono,
a typescript web framework similar to express. You have a generally hostile disposition.

You need to help craft requests to route handlers.

You will be provided the source code of a route handler for an API route, and you should generate
query parameters, a request body, and headers that will test the request.

Be clever and creative with test data. Avoid just writing things like "test".

For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*

If you get a route like \`POST /users/:id\` with a handler like:

\`\`\`ts
async (c) => {
const token = c.req.headers.get("authorization")?.split(" ")[1]

const auth = c.get("authService");
const isAuthorized = await auth.isAuthorized(token)
if (!isAuthorized) {
return c.json({ message: "Unauthorized" }, 401)
}

const db = c.get("db");

const id = c.req.param('id');
const { email } = await c.req.json()

const user = (await db.update(user).set({ email }).where(eq(user.id, +id)).returning())?.[0];

if (!user) {
return c.json({ message: 'User not found' }, 404);
}

return c.json(user);
}
\`\`\`

You should return a filled-in "path" field like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

and a header like:

{ "headers": { "key": "authorization", "value": "Bearer admin" } }

and a body like:

{ "body": { "email": "" } }

It is possible that the body type is JSON, text, or form data. You can use the wrong body type to see what happens.
But if the body type is a file stream, just return an empty body.

For form data, you can return a body type of "form-data". You can still return a JSON object like above,
I will handle converting it to form data.

You should focus on trying to break things. You are a QA.

You are the enemy of bugs. To protect quality, you must find bugs.

Try strategies like specifying invalid data, missing data, or invalid data types (e.g., using strings instead of numbers).

Try to break the system. But do not break yourself!
Keep your responses to a reasonable length. Including your random data.

Never add the x-fpx-trace-id header to the request.

Use the tool "make_request". Always respond in valid JSON.
***Don't make your responses too long, otherwise we cannot parse your JSON response.***"
`;

exports[`generate request > home handler (QA / original) 3`] = `
{
  "headers": [
    {
      "key": "User-Agent",
      "value": "EvilGoose/1.0",
    },
    {
      "key": "Accept",
      "value": "text/html",
    },
  ],
  "path": "/",
  "queryParams": [
    {
      "key": "shouldHonk",
      "value": "true",
    },
    {
      "key": "maliciousParam",
      "value": "<script>alert('XSS');</script>",
    },
  ],
}
`;

exports[`generate request > home handler (QA / slim) 1`] = `
"I need to make a request to one of my Hono api handlers.

Here are some recent requests and responses, which you can use as inspiration for future requests.

<history>
NO HISTORY
</history>

The request you make should be a GET request to route: /

Here is the OpenAPI spec for the handler:
NO OPENAPI SPEC

Here is the middleware that will be applied to the request:
NO MIDDLEWARE

Here is some additional context for the middleware that will be applied to the request:
NO MIDDLEWARE CONTEXT

Here is the code for the handler:
(c) => {
  const honk = shouldHonk(c.req) ? "Honk honk!" : "";
  console.log(\`Home page accessed. Honk: \${honk}\`);
  return c.text(\`Hello Goose Quotes! \${honk}\`.trim());
}

Here is some additional context for the handler source code, if you need it:
<expanded-function>
<entry>
  <name filename="utils.ts">shouldHonk</name>
  <definition>
    export function shouldHonk(r: HonoRequest) {
      const { shouldHonk } = r.query();
      return typeof shouldHonk !== "undefined";
    }
  </definition>
</entry>
</expanded-function>

REMEMBER YOU ARE A QA. MISUSE THE API. BUT DO NOT MISUSE YOURSELF.
Keep your responses short-ish. Including your random data."
`;

exports[`generate request > home handler (QA / slim) 2`] = `
"You are an expert QA Engineer, a thorough API tester with a generally hostile disposition. Please help user to craft requests to route handlers.


For example, if you get a route like \`/users/:id\`, you should return a filled-in "path" field,
like \`/users/1234567890\` and a "pathParams" field like:

{ "path": "/users/1234567890", "pathParams": { "key": ":id", "value": "1234567890" } }

*Remember to keep the colon in the pathParam key!*


You should focus on trying to break things. Be clever and creative with test data."
`;

exports[`generate request > home handler (QA / slim) 3`] = `
{
  "headers": [
    {
      "key": "User-Agent",
      "value": "EvilGoose/1.0",
    },
    {
      "key": "X-Forwarded-For",
      "value": "192.168.1.1, 10.0.0.1, 172.16.0.1",
    },
  ],
  "path": "/",
  "queryParams": [
    {
      "key": "shouldHonk",
      "value": "true",
    },
    {
      "key": "malicious",
      "value": "<script>alert('XSS')</script>",
    },
  ],
}
`;
